--- a/ShoppingCart/Views/Cart/Checkout.cshtml
+++ b/ShoppingCart/Views/Cart/Checkout.cshtml
@@ -43,29 +43,29 @@
             <table class="table table-striped" style="margin-top: 3%; margin-bottom: 3%">
                 <thead class="thead-light">
                     <tr>
-                        <th>Product</th>
-                        <th>Quantity</th>
-                        <th>Price</th>
-                        <th>Total Amount</th>
+                        <th colspan="2" class="align-items-md-start">Product</th>
+                        <th class="text-center">Quantity</th>
+                        <th class="text-center">Price</th>
+                        <th class="text-center">Total Amount</th>
                     </tr>
                 </thead>
                 <tbody>
                     @{ foreach (KeyValuePair<Product, int> pair in ListItemQuantities)
                         {
-                            <tr>
-                                <td class="align-items-md-start"><img src="~/Images/@pair.Key.ImageName" alt="Alternate Text" style="height: 100px; width: 100px" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>@pair.Key.ProductName</b></td>
-                                <td class="align-items-md-start">@pair.Value</td>
-                                <td class="align-items-md-start">$@(pair.Key.Price.ToString("0,0.00"))</td>
-                                <td class="align-items-md-start">$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</td>
+                            <tr valign="middle">
+                                <td class="align-items-md-start"><img src="~/Images/@pair.Key.ImageName" alt="Alternate Text" class="rounded" style="height: 120px; width: 180px" /></td>
+                                <td class="text-left" style="word-wrap:break-word; word-break:break-word; width: 35%"><br /><b>@pair.Key.ProductName</b><br />@pair.Key.Description</td>
+                                <td class="text-center"><br />@pair.Value</td>
+                                <td class="text-center"><br />$@(pair.Key.Price.ToString("0,0.00"))</td>
+                                <td class="text-center"><br />$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</td>
                             </tr>
                         }
                     }
 
                     <tr class="bg-primary align-items-md-start" style="color:white">
-                        <td></td>
-                        <td></td>
-                        <td><b>TOTAL PRICE</b></td>
-                        <td><b>$@(totalPrice.ToString("0,0.00"))</b></td>
+                        <td colspan="3"></td>
+                        <td class="text-center"><b>TOTAL PRICE</b></td>
+                        <td class="text-center"><b>$@(totalPrice.ToString("0,0.00"))</b></td>
                     </tr>
                 </tbody>
             </table>
