--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -6,6 +6,11 @@
     ViewData["Title"] = "Shopping Cart: " + customerName;
     List<Product> productsinCart = ViewBag.ProductsInCart;
     Dictionary<Product, int> countOfItems = ViewBag.CountOfItems;
+    string visible = "disabled";
+
+    if (countOfItems.Count > 0) {
+        visible = "";
+    }
 }
 
 <div class="container">
@@ -16,7 +21,7 @@
         </form>
         |
         <form action="/Cart/Checkout" method="post" style="margin-left: 1%;">
-            <button type="submit" class="btn btn-primary">Checkout</button>
+            <button type="submit" class="btn btn-primary" @visible>Checkout</button>
         </form>
     </div>
 
@@ -24,7 +29,9 @@
 
         <thead class="thead-light">
             <tr>
-                <th colspan="4" class="align-items-md-start">Product Details</th>
+                <th colspan="2" class="align-items-md-start">Product Details</th>
+                <th class="text-center">Price</th>
+                <th class="text-center">Total Price</th>
                 <th class="text-center">Actions</th>
             </tr>
         </thead>
@@ -33,27 +40,31 @@
                 foreach (KeyValuePair<Product, int> pair in countOfItems)
                 {
                     <tr valign="middle">
-                        <td class="align-items-md-start"><img src="~/Images/@pair.Key.ImageName" alt="Alternate Text" style="height: 100px; width: 100px" /></td>
-                        <td class="align-items-md-start"><b>@pair.Key.ProductName</b></td>
-                        <td class="text-center">$@(pair.Key.Price.ToString("0,0.00"))</td>
-                        <td class="text-center">$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</td>
-                        <td class="align-items-md-end">
-                            <button class="btn btn-outline-danger" style="margin-left: 3%; margin-right: 3%">-</button>
-                            <span style="margin-left: 3%; margin-right: 3%">@pair.Value</span>
-                            <button class="btn btn-success" style="margin-left: 3%; margin-right: 3%">+</button>
-                            <button class="btn btn-danger" style="margin-left: 5%; margin-right: 5%">X</button>
+                        <td class="align-items-md-start"><img src="~/Images/@pair.Key.ImageName" alt="Alternate Text" class="rounded" style="height: 120px; width: 180px" /></td>
+                        <td class="text-left" style="word-wrap:break-word; word-break:break-word; width: 35%"><br /><b>@pair.Key.ProductName</b><br />@pair.Key.Description</td>
+                        <td class="text-center"><br />$@(pair.Key.Price.ToString("0,0.00"))</td>
+                        <td class="text-center"><br />$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</td>
+                        <td class="text-center">
+                            <form>
+                                <br />
+                                <button class="btn btn-danger" style="margin-left: 3%; margin-right: 3%">-</button>
+                                <span style="margin-left: 3%; margin-right: 3%">@(pair.Value)</span>
+                                <button class="btn btn-success" style="margin-left: 3%; margin-right: 3%">+</button>
+                                <br />
+                                <button class="btn btn-link" style="margin-left: 5%; margin-right: 5%">Remove</button>
+                            </form>
                         </td>
                     </tr>
                 }
             }
 
-            <tr class="bg-primary" style="color:white">
-                <td></td>
-                <td></td>
-                <td></td>
-                <td class="text-center"><b>TOTAL PRICE</b></td>
-                <td class="text-center"><b>$@(totalPrice.ToString("0,0.00"))</b></td>
-            </tr>
+        <tr class="bg-primary" style="color:white">
+            <td></td>
+            <td></td>
+            <td class="text-center"><b>TOTAL PRICE</b></td>
+            <td class="text-center"><b><span id="totalPrice">$@(totalPrice.ToString("0,0.00"))</span></b></td>
+            <td></td>
+        </tr>
         </tbody>
     </table>
 
@@ -63,7 +74,7 @@
         </form>
         |
         <form action="/Cart/Checkout" method="post" style="margin-left: 1%;">
-            <button type="submit" class="btn btn-primary">Checkout</button>
+            <button type="submit" class="btn btn-primary" @visible>Checkout</button>
         </form>
     </div>
 </div>
