--- a/ShoppingCart/Views/Gallery/Product.cshtml
+++ b/ShoppingCart/Views/Gallery/Product.cshtml
@@ -18,9 +18,12 @@
             if (!elem) {
                 return;
             }
-            elem.onclick = function (event) {             
+            elem.onclick = function (event) {
+                let cartcontent = document.getElementById("currentCartContents");
+                let currentVal = parseInt(cartcontent.innerHTML);
+                cartcontent.innerHTML = currentVal + 1;
                 AddItemToCart("@product.ProductName")
-        }
+            }
         RateStar(@averageRating)
     }
     </script>
