--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
 
                         <li class="nav-item">
                             <div style="border-radius: 20px; background-color: #ac2a2a">
-                                <a style="color: white" class="nav-link" asp-area="" asp-controller="Cart" asp-action="Index">@(ViewBag.CartContents)</a>
+                                <a style="color: white" class="nav-link" asp-area="" asp-controller="Cart" asp-action="Index" id="currentCartContents">@(ViewBag.CartContents)</a>
                             </div>
                         </li>
 
