--- a/ShoppingCart/Views/Gallery/Index.cshtml
+++ b/ShoppingCart/Views/Gallery/Index.cshtml
@@ -1,39 +1,35 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
-    List<Product> searchResult = (List<Product>)ViewData["searchResult"];
+    List<Product> searchResult = ViewBag.SearchResult;
+    string searchInput = ViewBag.SearchInput;
 }
 
-@*carousel*@
-<div class="container">
-    <!-- Content here -->
-    <div class="text-center">
-        <h1 class="display-4">Gallery</h1>
-    </div>
 
 @*search bar*@
-    <div class="container">
-        <div class="row">
-            <form action="/Gallery/" method="post" class="col-12">
-                <input type="search" class="form-control" name="search" id="search" placeholder="Search..." value="@ViewData["searchInput"]" />
-            </form>
-        </div>
+<div class="container">
+    <div class="row">
+        <form action="/Gallery/" method="post" class="col-12">
+            <input type="search" class="form-control" name="search" id="search" placeholder="Search..." value="@searchInput" />
+        </form>
     </div>
+</div>
 
 
 @*sort products*@
-    <div class="container">
-        <div class="row">
-            <form action="/Gallery/" method="post" class="col-10 py-2">
-                <label class="form-check-inline">Sort by: &nbsp;</label>
-                <button type="submit" class="btn btn-link p-0" formaction="Index?search=@ViewData["searchInput"]&sort=asc">Price ascending,</button>
-                <button type="submit" class="btn btn-link" formaction="Index?search=@ViewData["searchInput"]&sort=desc">Price descending</button>
-            </form>
-            <div class="text-right pt-3 col-2">
-                <p>@searchResult.Count products found</p>
-            </div>
+<div class="container">
+    <div class="row">
+        <form method="post" class="col-10 py-2">
+            <label class="form-check-inline">Sort by: &nbsp;</label>
+            <button type="submit" class="btn btn-link p-0" formaction="/Gallery/Index?search=@searchInput&sort=asc">Price ascending,</button>
+            <button type="submit" class="btn btn-link" formaction="/Gallery/Index?search=@searchInput&sort=desc">Price descending</button>
+        </form>
+        <div class="text-right pt-3 col-2">
+            <p>@searchResult.Count products found</p>
         </div>
     </div>
+</div>
+
 
 @*product list*@
 @{
@@ -66,10 +62,7 @@
                                         </button>
                                     </form>
                                     <p class="card-text">@product.Description</p>
-                                    @*action to change to cartcontroller/addcart*@
-                                    <form action="" method="post">
-                                        <button class="btn btn-outline-primary"><b>$@product.Price.ToString("0.00")</b>&nbsp;&nbsp;Add to cart</button>
-                                    </form>
+                                    <button type="button" class="btn btn-outline-primary addtoCartBtn" value="@product.ProductName"><b>$@product.Price.ToString("0.00")</b>&nbsp;&nbsp;Add to cart</button>
                                 </div>
                             </div>
                         </div>
@@ -79,4 +72,17 @@
         </div>
     }
 }
-</div>
+
+<script type="text/javascript">
+    window.onload = function () {
+        let elems = document.getElementsByClassName("addtoCartBtn");
+        for (let i = 0; i < elems.length; i++) {
+            let elem = elems[i];
+            elem.addEventListener('click', OnClick)
+        }
+        function OnClick(event) {
+            let elem = event.currentTarget;
+            AddItemToCart(elem.value);
+        }
+    }
+</script>
