--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -25,7 +25,7 @@
         </form>
     </div>
 
-    <table class="table table-striped" style="margin-top: 3%; margin-bottom: 3%">
+    <table id ="CartTable" class="table table-striped" style="margin-top: 3%; margin-bottom: 3%">
 
         <thead class="thead-light">
             <tr>
@@ -37,32 +37,32 @@
         </thead>
         <tbody>
             @{
-                foreach (KeyValuePair<Product, int> pair in countOfItems)
-                {
-                    <tr valign="middle">
+                int i =0;
+                foreach (KeyValuePair<Product, int> pair in countOfItems)                {
+                    <tr id="row.@i" valign="middle">
                         <td class="align-items-md-start"><img src="~/Images/@pair.Key.ImageName" alt="Alternate Text" class="rounded" style="height: 120px; width: 180px" /></td>
                         <td class="text-left" style="word-wrap:break-word; word-break:break-word; width: 35%"><br /><b>@pair.Key.ProductName</b><br />@pair.Key.Description</td>
-                        <td class="text-center"><br />$@(pair.Key.Price.ToString("0,0.00"))</td>
-                        <td class="text-center"><br />$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</td>
+                        <td class="text-center"><br /><span id="ProdPrice.@i">$@(pair.Key.Price.ToString("0,0.00"))</span></td>
+                        <td class="text-center"><br /><span id="toatProdPrice.@i">$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</span></td>
                         <td class="text-center">
-                            <form>
-                                <br />
-                                <button class="btn btn-danger" style="margin-left: 3%; margin-right: 3%">-</button>
-                                <span style="margin-left: 3%; margin-right: 3%">@(pair.Value)</span>
-                                <button class="btn btn-success" style="margin-left: 3%; margin-right: 3%">+</button>
-                                <br />
-                                <button class="btn btn-link" style="margin-left: 5%; margin-right: 5%">Remove</button>
-                            </form>
+                            
+                                      <br />
+                                <button id ="minusbtn" onclick = "RemoveFromCart('@pair.Key.ProductName', 'valField.@i', 'ProdPrice.@i', 'toatProdPrice.@i')" class="btn btn-danger" style="margin-left: 3%; margin-right: 3%">-</button>
+                                <span  id="valField.@i" style="margin-left: 3%; margin-right: 3%">@(pair.Value)</span>
+                                <button id ="plusbtn" onclick = "AddtoCart('@pair.Key.ProductName', 'valField.@i', 'ProdPrice.@i', 'toatProdPrice.@i')" class="btn btn-success" style="margin-left: 3%; margin-right: 3%">+</button>
+                                     <br />
+                                <button id ="RemoveProd" onclick = "RemoveProduct('@pair.Key.ProductName','row.@i','valField.@i', 'toatProdPrice.@i')" class="btn btn-link" style="margin-left: 5%; margin-right: 5%">Remove</button>
+                            
                         </td>
                     </tr>
+                    i++;
                 }
             }
-
         <tr class="bg-primary" style="color:white">
             <td></td>
             <td></td>
             <td class="text-center"><b>TOTAL PRICE</b></td>
-            <td class="text-center"><b><span id="totalPrice">$@(totalPrice.ToString("0,0.00"))</span></b></td>
+            <td class="text-center"><b><span id="grandTotal">$@(totalPrice.ToString("0,0.00"))</span></b></td>
             <td></td>
         </tr>
         </tbody>
