--- a/ShoppingCart/Views/Purchase/Index.cshtml
+++ b/ShoppingCart/Views/Purchase/Index.cshtml
@@ -59,12 +59,11 @@
         show text of only 1 Activation Key (one line of the activation key)
         }
                                         *@
-                                    <form action="/" method="post">
-                                        <button class="btn btn-primary" type="button">
-                                            Review this Purchase
+                                    <form action="/Purchase/Review" method="post">
+                                        <button class="btn btn-primary" type="submit" name ="prodSclicked" value="@productMaps.GetValueOrDefault(purchase.Id).ProductName">
+                                            Review
                                         </button>
                                     </form>
-
 
                                     </div>
                                 </div>
@@ -73,8 +72,7 @@
                     }
                 </div>
             </div>
-        }
-    }
+        } }
 </div>
 
 @*
