1.All functionalities for the cart page done (price calculations, add, substract and remove using js & AJAX) 2.ProductRating model updated to have timestamp 3.Product Reviews are sorted according to timestamp

--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -21,7 +21,7 @@
         </form>
         |
         <form action="/Cart/Checkout" method="post" style="margin-left: 1%;">
-            <button type="submit" class="btn btn-primary" @visible>Checkout</button>
+            <button id ="CheckoutbuttonTop" type="submit" class="btn btn-primary" @visible>Checkout</button>
         </form>
     </div>
 
@@ -73,7 +73,7 @@
         </form>
         |
         <form action="/Cart/Checkout" method="post" style="margin-left: 1%;">
-            <button type="submit" class="btn btn-primary" @visible>Checkout</button>
+            <button id ="checkoutBtnBottom" type="submit" class="btn btn-primary" @visible>Checkout</button>
         </form>
     </div>
 </div>
