--- a/ShoppingCart/Views/Purchase/Index.cshtml
+++ b/ShoppingCart/Views/Purchase/Index.cshtml
@@ -2,93 +2,86 @@
     ViewData["Title"] = "Purchase Page";
     List<Purchase> purchases = (List<Purchase>)ViewData["purchaseList"];
     Dictionary<Guid, Product> productMaps = (Dictionary<Guid, Product>)ViewData["productMaps"];
-    Dictionary<Guid, ActivationCode[]> activeCodeMap = (Dictionary<Guid, ActivationCode[]>)ViewData["activeCodeMap"];
-    string customerName = ViewBag.CurrentUserName; 
 }
 
-<div class="container">
-    <h1>@(customerName)'s Purchases </h1>
-    <div class="nav form-check-inline justify-content-end">
-        <form action="/Gallery/Index" method="post" style="margin-right: 1%;">
-            <button type="submit" class="btn btn-outline-primary" style="white-space:nowrap">Continue Shopping</button>
-        </form>
-    </div>
-
-    <table class="table table-striped" style="margin-top: 3%; margin-bottom: 3%">
-
-    <thead class="thead-light">
-        <tr>
-            <th colspan="2" class="align-items-md-start">Purchase Details</th>
-            <th class="text-center">Quantity</th>
-            <th class="text-center">Purchased Date</th>
-            <th class="text-center">Review</th>
-        </tr>
-    </thead>
-    <tbody>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
 
-        @* Can delete this piece of code?
-        @{
-         if(purchases.Count == 0){
-             <div class="container">
-                 <div class="text-center p-5">
-                     <h2>No results... :(</h2>
-                 </div>
-             </div>
-           }
-         else{
-             <div class="container">
-                 <div class="row">
-           }
-         }End of Can delete this piece of code? *@
-
-
-        @{
-            foreach (var purchase in purchases)
-            {
-                <tr valign="baseline">
-                    <td class="centered"><img src="~/Images/@productMaps.GetValueOrDefault(purchase.Id).ImageName" alt="Alternate Text" class="rounded" style="height: 120px; width: 180px" /></td>
-                    <td class="text-left" align="center" style="word-wrap:break-word; word-break:break-word; width: 35%">
-                        <br /><b>@productMaps.GetValueOrDefault(purchase.Id).ProductName</b><br />@productMaps.GetValueOrDefault(purchase.Id).Description<br />
-                        <br /><b style="color:steelblue"><i>Actication Codes:</i></b>
-                        <br /><b>
-                                 @{
-                                    ActivationCode[] activationCodes = activeCodeMap.GetValueOrDefault(purchase.Id);
-                                    if (activationCodes.Length == 1)
-                                    {
-                                      <span>@activationCodes[0].Id</span>
-                                    }
-                                    else if (activationCodes.Length > 1)
-                                    {
-                                      <b class="dropdown">
-                                         <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                          @activationCodes[0].Id
-                                         </button>
-                                         <b class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                          @foreach (var activationCode in activationCodes)
-                                           {
-                                              <a class="dropdown-item"> @activationCode.Id</a> @*one activation key*@
-                                           }
-                                         </b>
-                                      </b>
-                                    }
-                                 }
-                             </b>
-                    </td>
-                    <td class="center" align="center"><br /> @purchase.PurchaseQty </td>
-                    <td class="centered" align="center"><br /> @purchase.PurchaseDate.ToString("dd MMM yyyy")</td>
-                    <td class="text-center" align="center"><br />
-                      <form action="/Purchase/Review" method="post">
-                        <button type="submit" class="btn btn-warning" name="prodSclicked" value="@productMaps.GetValueOrDefault(purchase.Id).ProductName">How You Like It</button>
-                      </form>
-                    </td>
-                </tr>
-
-
-            }
+    @*purchase list*@
+    @{
+        if (purchases.Count == 0)
+        {
+            <div class="container">
+                <div class="text-center p-5">
+                    <h2>No results... :(</h2>
+                </div>
+            </div>
         }
+        else
+        {
+            <div class="container">
+                <div class="row">
+                    @{
+                        foreach (var purchase in purchases)
+                        {
+                            <div class="col-4 p-2">
+                                <div class="card">
+                                    <form action="/Gallery/Product" method="post">
+                                    </form>
+                                    <div class="card-body">
+                                        <form action="/Gallery/Product" method="post">
+                                            <button type="submit" class="btn btn-link text-body p-0 m-0" name="productId" value="@purchase.Id">
+                                            </button>
+                                        </form>
+                                        <span class="card-title">ProductId: @purchase.ProductId</span>
+                                        <span class="card-title">PurchaesDate: @purchase.PurchaseDate</span>
+                                        <span class="card-title">PurchaseQty: @purchase.PurchaseQty</span>
+                                        <span class="card-title">Product Name: @productMaps.GetValueOrDefault(purchase.Id).ProductName</span>
+                                        <span class="card-title">Product Description: @productMaps.GetValueOrDefault(purchase.Id).Description</span>
+                                        @*dropdown or text
+        if (activation key under this particular purchase > 1) {
+        dropdown*@
+                                        <div class="dropdown">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Dropdown button
+                                            </button>
 
+                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                @*foreach (Activation Key under this purchase)*@
+                                                <a class="dropdown-item" href="#">Action</a> @*one activation key*@
+                                            </div>
+                                        </div>
+                                        @*end of dropdown*@
 
-</table>
+                                        @*} else {
+        show text of only 1 Activation Key (one line of the activation key)
+        }
+                                        *@
+                                    <form action="/Purchase/Review" method="post">
+                                        <button class="btn btn-primary" type="submit" name ="prodSclicked" value="@productMaps.GetValueOrDefault(purchase.Id).ProductName">
+                                            Review
+                                        </button>
+                                    </form>
+
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+            </div>
+        } }
 </div>
 
+@*
+    Purchase onHand = db.Purchases.FirstOrDefault(x => x.CustomerId == currentCustomer.Id && x.ProductId == item.ProductId);
+
+    ActivationCode newCode = new ActivationCode
+    {
+             //put the attributes
+             ProductID = item.ProductId,
+             PurchaseID = onHand.Id
+    };
+*@
