Done on custom alerts

--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -130,7 +130,7 @@
                     <p>Thank you for the rating and sharing your experience</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="purchases">Delete</button>">PURCHASES</button>
+                    <button type="button" class="btn btn-primary" id="purchases" onclick="setSubmitOK()">BACK TO PURCHASES</button>
                 </div>
             </div>
         </div>
